fixed array offset error and added hyperlink effects for dark mode
i frogot to add one substitution which offset all the suggestions by one making them entirely wrong and fixed some spacing issues in the array also now links have cool effects in both themes

--- a/assets/styles/dark.css
+++ b/assets/styles/dark.css
@@ -30,6 +30,16 @@ p, li {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
 }
+a {
+  color: var(--main);
+  margin: 10px 5px;
+  font-weight: bold;
+  font-family: 'Roboto Mono', monospace;
+}
+a:hover {
+  background: var(--highlight);
+  border-radius: 4px;
+}
 button {
   margin: 10px 5px;
   transition-duration: 0.2s;
